<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">DereHelper</string>
    <string name="skill_empty">No skill</string>
    <string name="locale_changed">Language changed</string>
    <string name="locale_changed_need_restart">APP needs restart</string>
    <string name="low">Low</string>
    <string name="middle">Mid</string>
    <string name="high">High</string>
    <string name="about">About</string>

    <string name="about_resource" translatable="false">Resource from: kirara.ca</string>
    <string name="about_api" translatable="false">API by: starlight.346lab.org</string>
    <string name="about_open_source" translatable="false">Open source：<u>https://github.com/lazyeraser/DereHelper</u></string>
    <string name="about_author">Author：@lazyeraser</string>
    <string name="about_copyright">APP for THE iDOLM@STER Cinderella Girls: Starlight Stage.ALL copyright of the data shown in this app belongs to BANDAI NAMCO Entertainment Inc.</string>
    <string name="about_translator"> </string>
    <string name="age">Age</string>
    <string name="app_exit_hint">Press again to exit</string>
    <string name="appeal_max">Max Appeal</string>
    <string name="beat_map_view">BeatMap</string>
    <string name="birthday">BirthDay</string>
    <string name="blood_type">Blood Type</string>
    <string name="card_detail">Card Detail</string>
    <string name="card_list">Card List</string>
    <string name="card_rare">Rarity</string>
    <string name="card_type">Type</string>
    <string name="chara_list">Chara List</string>
    <string name="check_app_update">Check APP update</string>
    <string name="check_data_update">Check data update</string>
    <string name="check_hint">Up to date</string>
    <string name="constellation">Constellation</string>
    <string name="dialog_downfailed_btnnext">Redownload</string>
    <string name="dialog_downfailed_msg">Download failed</string>
    <string name="dialog_downloading_msg">Downloading</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_update_btnnext">Next time</string>
    <string name="dialog_update_btnupdate">Update</string>
    <string name="dialog_update_msg">New version</string>
    <string name="dialog_update_title">Version update</string>
    <string name="empty">Empty</string>
    <string name="empty_filter_choose">Clear</string>
    <string name="favourite_thing">Favourite</string>
    <string name="filter_confirm">OK</string>
    <string name="filter_reset">Reset</string>
    <string name="get_type">How to get</string>
    <string name="get_type_event">Event</string>
    <string name="get_type_fes">FES</string>
    <string name="get_type_limit">Limited</string>
    <string name="get_type_normal">Normal</string>
    <string name="got_online">Implement</string>
    <string name="hand">Used hands</string>
    <string name="hand_both">Both</string>
    <string name="height">Height</string>
    <string name="hometown">Hometown</string>
    <string name="idol_cards">Idol\'s cards</string>
    <string name="idol_info">Idol</string>
    <string name="idol_mv">Idol\'s MV</string>
    <string name="info_base">Personal information</string>
    <string name="is_evolution">Evolution</string>
    <string name="left">Left</string>
    <string name="list_empty_hint">No data, please try data updating/downloading.</string>
    <string name="loading">Loading…</string>
    <string name="loading_pic">Loading picture…</string>
    <string name="menu_0">Idol</string>
    <string name="menu_1">Production</string>
    <string name="music_level">Level:</string>
    <string name="name_kana">Hiragana</string>
    <string name="network_error_0">Network error</string>
    <string name="network_error_1">Connection error</string>
    <string name="network_error_2">Parse error</string>
    <string name="network_error_3">Error</string>
    <string name="network_error_4">Error</string>
    <string name="network_error_5">Unknown Error</string>
    <string name="evo_before">Before</string>
    <string name="no_update">APP is up to date</string>
    <string name="online_date">Implement date</string>
    <string name="unit_day">" "</string>
    <string name="unit_month">.</string>
    <string name="unit_age">" "</string>
    <string name="un_connect">Network not available</string>
    <string name="only_one_title">Cards I want</string>
    <string name="other">Others</string>
    <string name="permission_denied_hint">Permissions are required to download update</string>
    <string name="right">Right</string>
    <string name="save_error">Failed</string>
    <string name="save_success">Saved successfully</string>
    <string name="save_to_gallery">Save to Camera Roll</string>
    <string name="settings">Settings</string>
    <string name="settings_auto_app">Check APP update automatically</string>
    <string name="settings_auto_data">Check data update automatically</string>
    <string name="settings_default_tran">Turn on translation by default</string>
    <string name="skill_centre">Center Skill</string>
    <string name="skill_chance">Chance</string>
    <string name="skill_effect_length">Effect length</string>
    <string name="skill_live">Live Skill</string>
    <string name="skill_type">Skill type</string>
    <string name="song_beat_map">BeatMap</string>
    <string name="song_description">Description</string>
    <string name="song_detail">Music Detail</string>
    <string name="song_info">Music Information</string>
    <string name="song_list">Music List</string>
    <string name="song_mv_position">MV Position</string>
    <string name="song_name_kana">Name(Hiragana)</string>
    <string name="sort_method">Sort method</string>
    <string name="sort_method_0">Desc</string>
    <string name="sort_method_1">Asc</string>
    <string name="sort_type">Sort type</string>
    <string name="three_size">Three size</string>
    <string name="translate">Translation</string>
    <string name="type_unknown">Unknown type</string>
    <string name="update_error">Data writing error, restart the APP and try again</string>
    <string name="update_hint0">Producer, you got new idol data</string>
    <string name="update_hint1">Update now?(WI-FI recommended)</string>
    <string name="update_hint2">Next time</string>
    <string name="update_hint3">Update</string>
    <string name="update_hint4">Downloading data</string>
    <string name="update_hint5">Downloading</string>
    <string name="update_hint_finish">Update finished</string>
    <string name="update_hint_finish_msg">App will restart to reload data</string>
    <string name="update_hint_manifest">Update BeatMap list</string>
    <string name="weight">Weight</string>
    <string name="evo_after">After</string>
    <string name="accept">Accept</string>
    <string name="analytics_ask_content">Producer!Would you mind if the developer collected your device information and your usage? It will help the developer a lot.\n\n(Service is provided by Google Analytics)</string>
    <string name="analytics_ask_title">Analytics</string>
    <string name="settings_analytics">Enable analytics</string>
    <string name="constellation_1">Aries</string>
    <string name="constellation_11">Aquarius</string>
    <string name="constellation_12">Pisces</string>
    <string name="constellation_2">Taurus</string>
    <string name="constellation_3">Gemini</string>
    <string name="constellation_4">Cancer</string>
    <string name="constellation_5">Leo</string>
    <string name="constellation_6">Virgo</string>
    <string name="constellation_7">Libra</string>
    <string name="constellation_8">Scorpio</string>
    <string name="constellation_9">Sagittarius</string>
    <string name="constellation_10">Capricornus</string>
    <string name="constellation_6_special">Virgo that makes flowers ashamed</string>
    <string name="decline">Deny</string>
    <string name="unit_height" translatable="false">cm</string>
    <string name="unit_weight" translatable="false">kg</string>
    <string name="bpm" translatable="false">BPM</string>

    <string name="cancel">Cancel</string>
    <string name="download_speedup"> </string>

    <string name="search">Search</string>
    <string name="search_hint_chara">Romaji/Name/Hiragana/CV</string>
    <string name="update_checking_hint_data">Checking Database Update</string>
    <string name="update_checking_hint_app">Checking APP Update</string>
</resources>
