<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <data>
        <variable
            name="viewModel"
            type="com.lazyeraser.imas.cgss.viewmodel.CardListViewModel" />
        <import type="me.tatarka.bindingcollectionadapter.LayoutManagers"/>
        <import type="android.view.View" />
    </data>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:openDrawer="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/back">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                android:fastScrollEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                bind:itemView="@{viewModel.itemView}"
                bind:items="@{viewModel.itemViewModel}"
                bind:layoutManager="@{LayoutManagers.linear()}" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:clickable="true"
            android:background="@color/white">

            <com.lazyeraser.imas.cgss.utils.view.LazyScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/filter_btn"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="12dp"
                        android:textColor="@color/txtBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_rare"/>

                    <com.lazyeraser.imas.cgss.utils.view.MultiLineChooseLayout
                        android:layout_marginTop="5dp"
                        style="@style/FlowLayout"
                        android:layout_marginStart="12dp"
                        android:id="@+id/rareChoose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        bind:onSelChange="@{viewModel.onRareSelCommand}"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="12dp"
                        android:layout_width="wrap_content"
                        android:textColor="@color/txtBlack"
                        android:layout_height="wrap_content"
                        android:text="@string/card_type"/>

                    <com.lazyeraser.imas.cgss.utils.view.MultiLineChooseLayout
                        android:layout_marginTop="5dp"
                        style="@style/FlowLayout"
                        android:layout_marginStart="12dp"
                        android:id="@+id/typeChoose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        bind:onSelChange="@{viewModel.onTypeSelCommand}"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="12dp"
                        android:layout_width="wrap_content"
                        android:textColor="@color/txtBlack"
                        android:layout_height="wrap_content"
                        android:text="@string/get_type"/>

                    <com.lazyeraser.imas.cgss.utils.view.MultiLineChooseLayout
                        android:layout_marginTop="5dp"
                        style="@style/FlowLayout"
                        android:layout_marginStart="12dp"
                        android:id="@+id/getTypeChoose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        bind:onSelChangeIndex="@{viewModel.onGetTypeSelCommand}"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="12dp"
                        android:textColor="@color/txtBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/is_evolution"/>

                    <com.lazyeraser.imas.cgss.utils.view.MultiLineChooseLayout
                        android:layout_marginTop="5dp"
                        style="@style/FlowLayout"
                        bind:item_multiChooseable="true"
                        android:layout_marginStart="12dp"
                        android:id="@+id/evoChoose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        bind:onSelChangeIndex="@{viewModel.onEvoSelCommand}"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="12dp"
                        android:layout_width="wrap_content"
                        android:textColor="@color/txtBlack"
                        android:layout_height="wrap_content"
                        android:text="@string/sort_type"/>

                    <com.lazyeraser.imas.cgss.utils.view.MultiLineChooseLayout
                        android:layout_marginTop="5dp"
                        style="@style/FlowLayout"
                        bind:item_multiChooseable="false"
                        android:layout_marginStart="12dp"
                        android:id="@+id/sttChoose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        bind:onSelChange="@{viewModel.sortTypeCommand}"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="12dp"
                        android:textColor="@color/txtBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort_method"/>

                    <com.lazyeraser.imas.cgss.utils.view.MultiLineChooseLayout
                        android:layout_marginTop="5dp"
                        style="@style/FlowLayout"
                        bind:item_multiChooseable="false"
                        android:layout_marginStart="12dp"
                        android:id="@+id/stmChoose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        bind:onSelChangeIndex="@{viewModel.sortMethodCommand}"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_marginStart="12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/txtBlack"
                            android:text="@string/skill_type"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/empty_filter_choose"
                            android:id="@+id/empty_skill_type_choose"
                            android:layout_marginEnd="8dp"/>

                    </RelativeLayout>

                    <com.lazyeraser.imas.cgss.utils.view.MultiLineChooseLayout
                        android:layout_marginTop="5dp"
                        style="@style/FlowLayout"
                        bind:item_multiChooseable="true"
                        android:layout_marginStart="12dp"
                        android:id="@+id/skillTypeChoose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        bind:onSelChange="@{viewModel.skillTypeCommand}"/>

                </LinearLayout>

            </com.lazyeraser.imas.cgss.utils.view.LazyScrollView>

            <LinearLayout
                android:id="@+id/filter_btn"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:background="@drawable/umi_bg_corners_solid"
                    android:text="@string/filter_confirm"
                    android:textColor="@color/white"
                    bind:clickCommand="@{viewModel.filterCardsCommand}"/>

                <Button
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:background="@drawable/umi_bg_corners_solid"
                    android:text="@string/filter_reset"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/white"
                    bind:clickCommand="@{viewModel.resetFilterCommand}"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.DrawerLayout>

</layout>